apps/comparebuilding-web/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: comparebuilding-web
  labels:
    app.kubernetes.io/name: comparebuilding-web
