apps/comparebuilding-web/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: comparebuilding-web
  namespace: comparebuilding-web
  labels:
    app.kubernetes.io/name: comparebuilding-web
    app.kubernetes.io/instance: comparebuilding-web
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: comparebuilding-web
  ports:
    - name: http
      port: 80
      targetPort: http
